Fixed shifting of the screen due to bug where scrollbar would dissapear

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   height: -webkit-fill-available;
   width: 100%;
   height: 100%;
+  overflow-y: scroll;
 }
 
 html {
